--- a/_config.yml
+++ b/_config.yml
@@ -2,24 +2,24 @@
 
 # REQUIRED CHANGES
 # Edit next line, providing your own name.
-title: Christian Cheshire | Professional Portfolio
+## title: Christian Cheshire | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://christiancheshire.github.io"
+##url: "https://christiancheshire.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: ""
+##baseurl: ""
 
 # OPTIONAL CHANGES
 # You might want to change the bio page label to something else, such as CV
-bio-page-label: Resume
+##bio-page-label: Resume
 # You might want to change the theme associated with one or more sections of the site.
 # Defining your own custom theme variations is easy. See the documentation.
-theme-home: theme-home-builtin-1.html
-theme-projects: theme-projects-builtin-1.html
-theme-essays: theme-essays-builtin-1.html
-theme-bio: theme-bio-builtin-1.html
+##theme-home: theme-home-builtin-1.html
+##theme-projects: theme-projects-builtin-1.html
+##theme-essays: theme-essays-builtin-1.html
+##theme-bio: theme-bio-builtin-1.html
 
 # Specify the rouge syntax highlighter theme. Pick one from css/rouge.
-rouge-theme: igorpro
+##rouge-theme: igorpro
 
 # YOU NORMALLY NEVER CHANGE THE FOLLOWING
 markdown: kramdown
